# gap_statistic

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Example-Copy1.ipynb  Example.ipynb  LICENSE  LICENSE-MIT  LICENSE.txt  Pipfile  README.md  Untitled.ipynb  appveyor.yml  azure-pipelines.yml  build-wheels.sh  optimalK.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test-requirements.txt
.github/workflows/: python.yml  release.yml  rust.yml
conda-recipe/: build.sh  meta.yaml
docker/: Dockerfile
examples/: speed_test.py
gap_statistic/: __init__.py  _version.py  optimalK.py
gap_statistic/tests/: test_optimalK.py
src/: lib.rs
src/gap_statistic/: mod.rs
src/kmeans/: mod.rs
src/tests/: mod.rs
tests/: test_formatting.py  test_optimalK.py
