[package]
name = "gapstat-rs"
version = "2.0.0"
authors = ["Miles Granger <miles59923@gmail.com>"]

[lib]
name = "gapstat_rs"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.12.0"
ndarray-rand = "0.9.0"
ndarray-parallel = "0.9.0"
num-traits = "0.2.4"
numpy = "0.7"
pyo3 = { version = "0.8", features = ["extension-module"]}
rand = "0.6.0"
rayon = "1.0.1"
statrs = "0.9.0"

[dev-dependencies]
criterion = "0.2"
